--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,8 @@
       "alguns",
       "altera",
       "alterações",
+      "alterado",
+      "alteram",
       "altere",
       "alterem",
       "alternativa",
@@ -85,6 +87,9 @@
       "aplicar",
       "aplique",
       "após",
+      "aprovado",
+      "Aprovado",
+      "aprovar",
       "aqui",
       "argumento",
       "argumentos",
@@ -113,6 +118,7 @@
       "Atualmente",
       "aumenta",
       "aumentar",
+      "aumento",
       "autenticação",
       "automaticamente",
       "autores",
@@ -125,6 +131,8 @@
       "barra",
       "barras",
       "baseado",
+      "baseando",
+      "Baseando",
       "basicamente",
       "básicos",
       "basta",
@@ -138,6 +146,7 @@
       "Botão",
       "botar",
       "buscar",
+      "caberia",
       "Cachorro",
       "cada",
       "cadastro",
@@ -165,6 +174,7 @@
       "certas",
       "certeza",
       "certifique",
+      "certo",
       "certos",
       "cerveja",
       "chama",
@@ -205,10 +215,12 @@
       "completa",
       "Completo",
       "complexa",
+      "complexas",
       "Complexidade",
       "complexo",
       "complexos",
       "Compor",
+      "comportam",
       "comportamentais",
       "Comportamental",
       "comportamento",
@@ -299,6 +311,8 @@
       "Cuidados",
       "custumer",
       "dando",
+      "daqui",
+      "DARIA",
       "decidam",
       "decidirem",
       "Declarar",
@@ -342,6 +356,7 @@
       "descontos",
       "descrevem",
       "descrevendo",
+      "descrevi",
       "descrição",
       "descrita",
       "descrito",
@@ -416,6 +431,7 @@
       "elemento",
       "elementos",
       "eles",
+      "elimina",
       "eliminar",
       "Encadeamento",
       "Encadeia",
@@ -456,6 +472,7 @@
       "erros",
       "escolhe",
       "escolhida",
+      "escrever",
       "escrito",
       "especie",
       "específica",
@@ -555,6 +572,7 @@
       "feitas",
       "feito",
       "Feliz",
+      "ficar",
       "fictício",
       "filha",
       "filhos",
@@ -617,6 +635,7 @@
       "hierarquia",
       "hierarquias",
       "hierarquicamente",
+      "horríveis",
       "houver",
       "idade",
       "ideia",
@@ -777,6 +796,7 @@
       "mostra",
       "mostrando",
       "motivo",
+      "movamos",
       "movidos",
       "muda",
       "mudado",
@@ -855,6 +875,7 @@
       "padrão",
       "padrões",
       "Padrões",
+      "pagamento",
       "palavra",
       "palavras",
       "parametro",
@@ -879,6 +900,8 @@
       "pela",
       "pelo",
       "pelos",
+      "pendente",
+      "Pendente",
       "pensar",
       "penso",
       "Perceba",
@@ -892,6 +915,7 @@
       "persistencia",
       "persistente",
       "pessoa",
+      "piorar",
       "pode",
       "podem",
       "podemos",
@@ -925,11 +949,13 @@
       "poucas",
       "poucos",
       "prática",
+      "praticamente",
       "precisa",
       "precisar",
       "precisará",
       "precisarão",
       "precisaremos",
+      "precisaria",
       "precisarmos",
       "preço",
       "preferir",
@@ -988,6 +1014,7 @@
       "quebram",
       "quebrando",
       "quebrar",
+      "quebrarmos",
       "quebrou",
       "queremos",
       "quiser",
@@ -1017,6 +1044,9 @@
       "recursão",
       "recursiva",
       "recursos",
+      "recusado",
+      "Recusado",
+      "recusar",
       "redefinam",
       "reescrever",
       "refatorar",
@@ -1024,6 +1054,7 @@
       "refeitos",
       "referência",
       "referências",
+      "referentes",
       "refinadas",
       "refinindo",
       "refiram",
@@ -1031,6 +1062,7 @@
       "refrigerante",
       "registre",
       "regra",
+      "regras",
       "relacionado",
       "relacionados",
       "remetente",
@@ -1043,6 +1075,7 @@
       "representação",
       "representações",
       "representada",
+      "representado",
       "representados",
       "representam",
       "representando",
@@ -1134,6 +1167,7 @@
       "solicita",
       "solicitação",
       "solicitações",
+      "solicitar",
       "solução",
       "solucionar",
       "sombra",
@@ -1163,6 +1197,7 @@
       "tela",
       "telefones",
       "temos",
+      "tende",
       "tendem",
       "tendo",
       "tenham",
@@ -1173,7 +1208,9 @@
       "terei",
       "terem",
       "teria",
+      "teriam",
       "teríamos",
+      "terminar",
       "termos",
       "testado",
       "testar",
@@ -1202,6 +1239,7 @@
       "transferido",
       "transforma",
       "transformar",
+      "transitar",
       "transmissão",
       "Trata",
       "tratamento",
