--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,12 +17,17 @@
       "acessado",
       "acessam",
       "acessar",
+      "achar",
       "acima",
       "ações",
       "acompanhar",
       "acompanhe",
       "acontecer",
+      "acopladas",
+      "acoplado",
+      "acoplados",
       "acoplamento",
+      "acoplar",
       "acordo",
       "adaptação",
       "adaptado",
@@ -32,6 +37,7 @@
       "adaptares",
       "Adaptee",
       "adiar",
+      "adição",
       "adiciona",
       "adicionais",
       "adicional",
@@ -106,6 +112,8 @@
       "atinge",
       "atingem",
       "atingir",
+      "ativado",
+      "ativar",
       "através",
       "atribui",
       "atribuição",
@@ -145,6 +153,7 @@
       "botão",
       "Botão",
       "botar",
+      "botões",
       "buscar",
       "caberia",
       "Cachorro",
@@ -239,9 +248,11 @@
       "computa",
       "comum",
       "comunicação",
+      "comunicações",
       "conceito",
       "conceitos",
       "concentre",
+      "concluídas",
       "concorrência",
       "concreta",
       "concretos",
@@ -256,6 +267,7 @@
       "configurando",
       "confundido",
       "conhece",
+      "conhecem",
       "conhecer",
       "conhecimento",
       "conjunto",
@@ -287,6 +299,7 @@
       "controlar",
       "controle",
       "convencional",
+      "conveniente",
       "conversão",
       "converte",
       "cópia",
@@ -402,8 +415,10 @@
       "diferentes",
       "difíceis",
       "difícil",
+      "dificultar",
       "digamos",
       "digitado",
+      "diminuir",
       "dinamicamente",
       "direcionar",
       "diretamente",
@@ -467,6 +482,7 @@
       "enviado",
       "enviados",
       "Enviar",
+      "envio",
       "época",
       "erro",
       "erros",
@@ -533,6 +549,7 @@
       "Existe",
       "existem",
       "existente",
+      "existirem",
       "explicitamente",
       "explosão",
       "expor",
@@ -542,6 +559,7 @@
       "externas",
       "externo",
       "externos",
+      "extinguir",
       "extrínseco",
       "extrínsecos",
       "fábrica",
@@ -581,6 +599,7 @@
       "finge",
       "fingir",
       "fingirá",
+      "firmemente",
       "flexibilidade",
       "flexível",
       "fluxo",
@@ -764,6 +783,10 @@
       "mãos",
       "máquina",
       "marcador",
+      "mediação",
+      "mediador",
+      "mediadores",
+      "mediando",
       "meio",
       "melhor",
       "membros",
@@ -813,6 +836,7 @@
       "naquela",
       "naturalmente",
       "necessária",
+      "necessárias",
       "necessário",
       "necessidade",
       "necessita",
@@ -833,7 +857,9 @@
       "nossa",
       "nosso",
       "nossos",
+      "notificado",
       "notificados",
+      "notificar",
       "nula",
       "nulo",
       "numa",
@@ -889,6 +915,7 @@
       "parecidas",
       "parecido",
       "partes",
+      "participantes",
       "partir",
       "passa",
       "passar",
@@ -915,6 +942,7 @@
       "persistencia",
       "persistente",
       "pessoa",
+      "pessoas",
       "piorar",
       "pode",
       "podem",
@@ -987,6 +1015,7 @@
       "promoções",
       "promove",
       "própria",
+      "propriamente",
       "propriedade",
       "Propriedade",
       "PROPRIEDADE",
@@ -1009,6 +1038,7 @@
       "Quantidade",
       "quantidades",
       "Quanto",
+      "quantos",
       "quase",
       "quebra",
       "quebram",
@@ -1090,6 +1120,7 @@
       "responsabilidade",
       "responsabilidades",
       "responsável",
+      "resposta",
       "ressaltar",
       "restante",
       "restaurá",
@@ -1109,6 +1140,8 @@
       "retorne",
       "Retorno",
       "retornos",
+      "reusabilidade",
+      "reutilização",
       "reutilizar",
       "revelar",
       "ROXO",
@@ -1156,6 +1189,7 @@
       "similares",
       "simplesmente",
       "simplificação",
+      "simplificar",
       "simultaneamente",
       "sinal",
       "sistemas",
@@ -1228,6 +1262,7 @@
       "toda",
       "todas",
       "todos",
+      "toma",
       "tomar",
       "torna",
       "tornar",
@@ -1241,6 +1276,7 @@
       "transformar",
       "transitar",
       "transmissão",
+      "transtorno",
       "Trata",
       "tratamento",
       "tratar",
@@ -1274,6 +1310,8 @@
       "utilizam",
       "utilizar",
       "validação",
+      "validações",
+      "validados",
       "vamos",
       "Vamos",
       "Vantagens",
