chain of responsability

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
       "abstratas",
       "abstrato",
       "abstratos",
+      "acabar",
       "ação",
       "acessá",
       "acessado",
@@ -308,6 +309,7 @@
       "correspondente",
       "correspondentes",
       "corretamente",
+      "couber",
       "creational",
       "criação",
       "criacionais",
@@ -778,6 +780,7 @@
       "maneiras",
       "manipule",
       "mantém",
+      "mantendo",
       "mantenha",
       "manter",
       "mãos",
@@ -890,6 +893,8 @@
       "operacional",
       "operações",
       "Operador",
+      "orçamento",
+      "ordem",
       "ordenada",
       "orientada",
       "originadoras",
@@ -998,6 +1003,8 @@
       "privados",
       "problema",
       "problemas",
+      "processamento",
+      "processar",
       "processo",
       "produto",
       "produtos",
@@ -1114,11 +1121,13 @@
       "representarem",
       "requer",
       "requerido",
+      "requisição",
       "requisitada",
       "requisitado",
       "requisito",
       "responsabilidade",
       "responsabilidades",
+      "responsáveis",
       "responsável",
       "resposta",
       "ressaltar",
@@ -1144,6 +1153,7 @@
       "reutilização",
       "reutilizar",
       "revelar",
+      "rígida",
       "ROXO",
       "ruim",
       "sabe",
@@ -1278,6 +1288,7 @@
       "transmissão",
       "transtorno",
       "Trata",
+      "tratada",
       "tratamento",
       "tratar",
       "tratarem",
