--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
       "algumas",
       "alguns",
       "altera",
+      "alteração",
       "alterações",
       "alterado",
       "alteram",
@@ -154,6 +155,7 @@
       "botão",
       "Botão",
       "botar",
+      "botei",
       "botões",
       "buscar",
       "caberia",
@@ -486,6 +488,7 @@
       "Enviar",
       "envio",
       "época",
+      "errado",
       "erro",
       "erros",
       "escolhe",
@@ -522,6 +525,7 @@
       "estático",
       "ESTÁTICO",
       "estaticos",
+      "estava",
       "esteja",
       "estendem",
       "estender",
@@ -632,6 +636,7 @@
       "funcionalidade",
       "funcionalidades",
       "funcionam",
+      "funcionando",
       "funcionar",
       "funcionarem",
       "gancho",
@@ -936,6 +941,7 @@
       "Pendente",
       "pensar",
       "penso",
+      "pequenos",
       "Perceba",
       "percebe",
       "perceber",
@@ -1154,6 +1160,7 @@
       "reutilizar",
       "revelar",
       "rígida",
+      "Rosana",
       "ROXO",
       "ruim",
       "sabe",
@@ -1294,6 +1301,7 @@
       "tratarem",
       "trate",
       "trecho",
+      "trechos",
       "Troca",
       "tudo",
       "unica",
