--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -493,6 +493,7 @@
       "erros",
       "escolhe",
       "escolhida",
+      "escreve",
       "escrever",
       "escrito",
       "especie",
@@ -781,6 +782,7 @@
       "maiores",
       "maioria",
       "mais",
+      "manda",
       "maneira",
       "maneiras",
       "manipule",
@@ -832,6 +834,7 @@
       "muda",
       "mudado",
       "mudam",
+      "mudança",
       "mudanças",
       "mudar",
       "muita",
@@ -865,6 +868,8 @@
       "nossa",
       "nosso",
       "nossos",
+      "notificação",
+      "notificações",
       "notificado",
       "notificados",
       "notificar",
