--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,6 +117,7 @@
       "ativado",
       "ativar",
       "através",
+      "atravessar",
       "atribui",
       "atribuição",
       "atribuidos",
@@ -196,6 +197,7 @@
       "chamados",
       "chamando",
       "chamar",
+      "chame",
       "chave",
       "checar",
       "cheio",
@@ -213,6 +215,8 @@
       "coisa",
       "coisas",
       "colaborar",
+      "coleção",
+      "coleções",
       "coletar",
       "comando",
       "comandos",
@@ -225,6 +229,7 @@
       "compatíveis",
       "complemento",
       "completa",
+      "completamente",
       "Completo",
       "complexa",
       "complexas",
@@ -294,6 +299,7 @@
       "conter",
       "contexto",
       "continuamos",
+      "continuar",
       "contrário",
       "contrato",
       "controla",
@@ -313,6 +319,7 @@
       "corretamente",
       "couber",
       "creational",
+      "crescente",
       "criação",
       "criacionais",
       "criada",
@@ -336,6 +343,7 @@
       "decorado",
       "decorador",
       "decorar",
+      "decrescente",
       "Defina",
       "definem",
       "definição",
@@ -583,6 +591,7 @@
       "facilmente",
       "falando",
       "falta",
+      "faltam",
       "família",
       "famílias",
       "favorita",
@@ -618,6 +627,7 @@
       "FODAAAAAAAA",
       "Fodões",
       "folha",
+      "foque",
       "foram",
       "força",
       "forcados",
@@ -750,6 +760,8 @@
       "Isola",
       "isolar",
       "isso",
+      "iterador",
+      "iteradores",
       "janela",
       "Janela",
       "jeito",
@@ -777,6 +789,7 @@
       "lógicas",
       "longo",
       "lugar",
+      "lugares",
       "Luiz",
       "maior",
       "maiores",
@@ -803,6 +816,7 @@
       "memória",
       "mencionei",
       "mencionou",
+      "menor",
       "menos",
       "Mensagem",
       "mensageria",
@@ -823,6 +837,7 @@
       "modificação",
       "modificadores",
       "modificar",
+      "modos",
       "modulos",
       "Modulos",
       "módulos",
@@ -919,6 +934,7 @@
       "pagamento",
       "palavra",
       "palavras",
+      "paralelo",
       "parametro",
       "parâmetro",
       "Parâmetro",
@@ -935,6 +951,7 @@
       "passa",
       "passar",
       "passos",
+      "pausar",
       "pede",
       "pedindo",
       "Pedrao",
@@ -970,6 +987,7 @@
       "pois",
       "polimórfica",
       "polimorfismo",
+      "polui",
       "poluir",
       "ponta",
       "pontos",
@@ -1007,6 +1025,7 @@
       "preocupam",
       "prevenir",
       "primeiro",
+      "principalmente",
       "princípio",
       "principios",
       "princípios",
@@ -1042,6 +1061,7 @@
       "próprios",
       "proteção",
       "protocolo",
+      "protocolos",
       "prototípica",
       "prototipo",
       "protótipo",
@@ -1049,6 +1069,7 @@
       "publicados",
       "público",
       "públicos",
+      "pulando",
       "quaisquer",
       "qualquer",
       "Qualquer",
@@ -1064,6 +1085,7 @@
       "quebrar",
       "quebrarmos",
       "quebrou",
+      "queira",
       "queremos",
       "quiser",
       "quiséssemos",
@@ -1170,6 +1192,7 @@
       "ruim",
       "sabe",
       "sabemos",
+      "saltos",
       "salva",
       "salvando",
       "segregação",
@@ -1305,6 +1328,7 @@
       "tratar",
       "tratarem",
       "trate",
+      "travessia",
       "trecho",
       "trechos",
       "Troca",
@@ -1328,6 +1352,7 @@
       "usarmos",
       "usem",
       "usuário",
+      "útil",
       "utilizá",
       "utilização",
       "utilizada",
@@ -1377,6 +1402,7 @@
       "votations",
       "voto",
       "zelador",
-      "zeladoras"
+      "zeladoras",
+      "zerado"
     ]
 }
