--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
       "adiar",
       "adição",
       "adiciona",
+      "adicionado",
       "adicionais",
       "adicional",
       "adicionando",
@@ -126,6 +127,7 @@
       "atual",
       "atualidade",
       "atualizados",
+      "atualizar",
       "Atualmente",
       "aumenta",
       "aumentar",
@@ -133,6 +135,7 @@
       "autenticação",
       "automaticamente",
       "autores",
+      "auxiliares",
       "Avenida",
       "avisos",
       "AZUL",
@@ -778,6 +781,7 @@
       "liga",
       "ligação",
       "ligar",
+      "Limpa",
       "limpo",
       "linguagem",
       "linguagens",
@@ -918,6 +922,7 @@
       "operacional",
       "operações",
       "Operador",
+      "operam",
       "orçamento",
       "ordem",
       "ordenada",
@@ -1392,6 +1397,7 @@
       "vídeos",
       "violando",
       "violar",
+      "visitantes",
       "visto",
       "Você",
       "votacao",
